plutus-conformance/test-cases/uplc/evaluation/builtin/constant/value/ill-formed/ill-formed.uplc
(program 1.0.0 (con value [("CURRENCY", [("TOKEN", 123)])]))
